2002-08-05  Wakaba <w@suika.fam.cx>

	* Date.pm:
	- (stringify): Use Message::Util::sprintxf instead of _date2str.
	- (date2str, -fmt2str): Removed.
	- (%FMT2STR): New hash.
	- (%MONTH): Experimental support of Japanese month names
	(require utf8 support of perl 5.7.3 or later).
	* Domain.pm (parse): Allow FWS surrounding the port number.

2002-08-04  Wakaba <w@suika.fam.cx>

	* Warning.pm: New module.
	* CSV.pm (_delete_empty): Don't remove reference
	if the length of its stringified value is zero.
	* Domain.pm: Parse and output port number if enabled by option.
	* Date.pm (overload '==', '<=', '>='): Added.

2002-08-03  Wakaba <w@suika.fam.cx>

	* Status.pm: New module.
	* URI.pm: Support RFC 1808's Base: field.

2002-08-01  Wakaba <w@suika.fam.cx>

	* Unstructured.pm: Rewritten.
	* Subject.pm: Likewise.  Support Japanese government's
	spam mail prefix if Perl has defined $^V (=~ has UTF-8 support).
	* CSV.pm: Reformatted.

2002-07-30  Wakaba <w@suika.fam.cx>

	* UA.pm:
	- (add, replace, item, delete): Reimplemented (or newly
	implemented) by standard Message::Field::Structured method.
	- (product, product_name, product_version, product_comment):
	Removed. (Use item method instead.)
	- (parse): Use robust regex instead of strict usefor
	format regex.  (Accept bare non-token characters
	as far as possible.)

2002-07-28  Wakaba <w@suika.fam.cx>

	* UA.pm (add_rcs, replace_rcs): New methods.

2002-07-22  Wakaba <w@suika.fam.cx>

	* XMoe.pm (_decode_parameters): Don't push 'of' pseudo
	parameter to @$param before SUPER::_decode_parameters.
	(To prevent its value from being reinterpreted incorrectly
	and so being broken.) (Giving also 'section_no' to the hash
	and passing to SUPER::_decode_parameters was another way
	to do it.)
	* UA.pm (add_our_name): Undef $@ after eval of use Config
	and use Win32.

2002-07-21  Wakaba <w@suika.fam.cx>

	* Structured.pm (_parse_value): Inherit header_default_charset,
	header_default_charset_input, body_default_charset,