@@ -1,3 +1,10 @@
+2002-08-29  Wakaba <w@suika.fam.cx>
+
+	* Date.pm:
+	- (%MONTH): Japanese month names are removed.  (I wish
+	those will be reintroduced in future version of this module.)
+	- (stringify): New options: '-format_macros', '-format_parameters'.
+
 2002-08-05  Wakaba <w@suika.fam.cx>
 
 	* Date.pm:
